[package]
name = "kv-for-likes_fjall"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
fjall = "2.4.1"
tikv-jemallocator = "0.6.0"
tinyjson = "2.5.1"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "read"
path = "src/read.rs"

[[bin]]
name = "lost-write"
path = "src/lost-write.rs"
